Item content on mobile devices fixed.

--- a/less/intelli/card.less
+++ b/less/intelli/card.less
@@ -368,6 +368,10 @@
 	@media (max-width: @screen-xs) {
 		margin-left: 80px;
 	}
+
+	@media (max-width: @grid-float-breakpoint) {
+		overflow: hidden;
+	}
 }
 
 .ia-cards__items.-grid {
